@@ -18,12 +18,7 @@
 package org.ballerinalang.nativeimpl.jvm.tests;
 
 import io.ballerina.runtime.api.Environment;
-import io.ballerina.runtime.api.Future;
-import io.ballerina.runtime.internal.scheduling.AsyncUtils;
 import org.testng.Assert;
-
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * This class is used for Java interoperability tests.
@@ -37,26 +32,9 @@ public final class AsyncInterop {
     private AsyncInterop() {
     }
 
-    public static int countSlowly() {
-        CompletableFuture<Object> future = AsyncUtils.markAsync();
-
-        new Thread(() -> {
-            sleep();
-            future.complete(42);
-        }).start();
-
-        return -1;
-    }
-
-    public static void completeFutureMoreThanOnce(Environment env) {
-        Future future = env.markAsync();
-        final AtomicInteger count = new AtomicInteger();
-        new Thread(() -> {
-            while (count.incrementAndGet() < 100) {
-
-                future.complete(null);
-            }
-        }).start();
+    public static int countSlowly(Environment env) {
+        Thread.startVirtualThread(AsyncInterop::sleep);
+        return 42;
     }
 
     private static void sleep() {
